# coros-training-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  cli.py  copy.js  coros_api.py  index.html  index.html.after  models.py  pace_parser.py  pyproject.toml  run-coros-mcp.zsh  run_workout_schema.py  server.py  strength_workout_schema.py  style.css  style.css.after  traininghub_live_builder_catalog.py  traininghub_static_enums.py  workout_catalog.py
.github/workflows/: release.yml
auth/: encrypted_store.py
docs/: agent-integration-test-prompt.md  enum-extraction.md  installer-plan.md  live-mcp-validation-prompt.md  mobile-token.md  release.md  workout-taxonomy.md
docs/enums/: traininghub-live-builder-catalog.json  traininghub-static-enums.json
installer/: __init__.py  assistants.py  regions.py  smoke.py  wizard.py
tests/: test_builder_catalog_live.py  test_coros_api.py  test_installer.py  test_installer_smoke.py  test_pace_parser.py  test_protocol_live.py  test_protocol_smoke.py  test_server_tools.py  test_strength_update.py  test_traininghub_live_builder_catalog.py  test_traininghub_static_enums.py  test_workout_catalog.py
