[project]
name = "coros-mcp"
version = "0.1.0"
description = "MCP server for Coros sleep and HRV data"
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "pycryptodome>=3.0",
    "fastmcp>=0.9",
    "httpx>=0.27",
    "keyring",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
coros-mcp = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py", "auth/*.py"]
